client/views/commentary/commentary.import.less
header {

  .active-comment-meta {
    margin-top: 5px;

    h3 {
      display: inline-block;
      vertical-align: top;
      font-size: 22px;

    }

    .lemma-text {
      display: inline-block;
      vertical-align: top;
      font-size: 20px;
      padding: 0 10px;
      margin: 0;

    }

  }

}

.commentary-index .comm-button .go-to-commentary {
  display: none;
}

.comment-index {
  background: #f6f6f6;
  footer {
    display: none;
  }
}

header .line-wrap {
  float: right;
  .line-text, .line-ref, .search {
    display: inline-block;
    vertical-align: top;
    padding: 0;

  }

  .line-text {
    margin-top: 20px;
    padding: 0 10px;
    font-size: 18px;
    font-family: @font-lemma;
  }

  .line-ref {
    font-family: @font-label;
    font-size: 18px;
    padding: 3px 20px 3px 15px;
    border-right: 1px solid #aaa;
    margin-top: 18px;

  }

}

.commentary-primary {
  padding: 60px 0;
  background: @background-gray;
}

.comment-group {
  display: block;
  width: 100%;
  margin: 0 auto;
  padding: 50px 25px;
  clear: both;
  position: relative;

  &.comment-ref--fixed {
    .comment-group-meta-inner {
      position: fixed;
      top: 100px;

      .comment-group-ref-above {
        margin-right: 15px;
      }

      .comment-group-commenters {
        padding-right: 15px;

      }

    }
  }

  .comment-group-end {
    margin: 100px auto 0;
    outline: none;
    border: none;
    height: 5px;
    background: @primary-light;
    min-width: 200px;
    width: 50%;

  }

}

.comment-group-meta {
  text-align: right;
  padding: 40px 0;
  display: inline-block;
  vertical-align: top;
  width: 10%;

  .comment-group-meta-inner {
    position: absolute;
    top: 115px;
    left: 4%;
  }

  .comment-group-meta-inner-fixed {
    position: fixed;
    top: 70px;
    left: 5%;
  }

  .comment-group-meta-inner-bottom {
    position: absolute;
    bottom: 173px;
    left: 5%;
  }

  .comment-group-ref-above {
    cursor: default;
    text-transform: uppercase;
    font-weight: bold;
    color: @secondary-text;
    padding: 30px 0px 5px 0;
    margin: 0 0px 0 0;
    font-family: @font-label;
    font-size: 16px;
    text-align: left;
    display: block;

  }

  h2.comment-group-ref-below {
    cursor: default;
    font-family: @font-title;
    font-size: 46px;
    font-weight: bold;
    color: #424242;
    margin: 0;
    padding: 5px 0px;
    display: inline-block;
    vertical-align: top;
    max-width: 89px;
    text-align: left;
    display: block;

    span {
      font-family: @font-title;
      font-size: 46px;
      font-weight: bold;

    }

    &.fixed {
      top: 50px;
      left: 112px;

    }

  }

  .comment-group-ref-lemma {
    text-align: right;
    padding: 0px 0;
    width: 60%;
    margin: 0 auto;
    display: inline-block;
    vertical-align: top;
    display: none;

    p {
      padding: 5px;
      margin: 0;
      font-size: 18px;
      color: @secondary-text;

    }

  }

  .comment-group-commenters {
    padding: 5px 0px 10px 0;

    .comment-author {
      clear: both;
      position: relative;

      &:hover {
        .comment-author-name {
          opacity: 1;
        }

      }

    }

    .comment-author-name {
      color: @secondary-text;
      font-size: 12px;
      top: 15px;
      right: 60px;
      text-transform: uppercase;
      position: absolute;
      opacity: 0;
      .transition(all 300ms ease-out);

    }

    .comment-author-image-wrap {
      margin: 5px 0;
      display: block;
      float: right;
    }

  }

}

.comments {
  display: inline-block;
  vertical-align: top;
  width: 100%;
  text-align: center;
  margin: 0 auto;

}

.comment-outer {
  margin: 0 auto;
  display: inline-block;
  vertical-align: top;
  width: 100%;
  text-align: center;
  position: relative;
  .transition(all 300ms ease-out);

}

.comment-lemma-comment-outer {

}

article.lemma-comment {
  border-top: 2px solid @primary;
  margin-left: 0;
  padding: 50px 40px;

  p.lemma-text {
    font-size: 20px;
    padding: 5px 15px;
    margin: 0;
    font-weight: normal;
    color: rgba(0, 0, 0, 0.7);

  }

  .edition-tab {
    display: inline-block;
    margin: 5px;
    box-shadow: none !important;
    border-radius: 2px;

    &.selected-edition-tab {
      background: @primary !important;
      margin: 3px;
      color: @light;
      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2) !important;
      border-radius: 2px;

      button, div {
        background: @primary !important;

      }

      span {
        color: @light !important;

      }

      &:hover {
        background: @primary-dark-2 !important;
        button, div {
          background: @primary-dark-2 !important;

        }

      }

    }

    button {
      padding: 5px 10px;
      max-width: 200px;
      text-overflow: ellipsis;

      span {
        //font-family:@font-label;
        font-size: 14px;
      }

    }

  }

  .context-tab {

    box-shadow: none !important;

    &:hover {
      i {
        margin-right: -4px;
      }
    }

    span {
      text-transform: uppercase;
      font-size: 14px;
      color: @secondary-text;
      display: inline-block;
      vertical-align: top;
      padding-top: 1px;
      .transition(all 100ms ease-out);
      padding-right: 3px;
      margin: 0px;
    }
    i {
      font-size: 18px;
      color: @secondary-text;
      display: inline-block;
      vertical-align: top;
      .transition(all 100ms ease-out);
      margin-right: 0px;

    }

  }

  .context-tabs, .edition-tabs {
    display: inline-block;
    vertical-align: top;
    padding-top: 30px;

  }

  .context-tabs {
    float: right;

  }

}
/* ... */

